--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -39,7 +39,7 @@
           android:text="TextView" />
 
       <EditText
-          android:id="@+id/editTextTextMultiLine"
+          android:id="@+id/book_contents"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
@@ -61,6 +61,7 @@
       <Button
           android:id="@+id/Save_button"
           android:layout_width="wrap_content"
+          android:background="@drawable/round_button"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_margin="10dp"
